--- a/Tipsy/View/Base.lproj/Main.storyboard
+++ b/Tipsy/View/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
         <!--Tipsy-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Tipsy" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="HomeVC" customModule="Tipsy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -66,7 +66,7 @@
                                                 <rect key="frame" x="220" y="241" width="94" height="32"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <connections>
-                                                    <action selector="stepper:" destination="BYZ-38-t0r" eventType="valueChanged" id="Gm6-cd-UEj"/>
+                                                    <action selector="stepperButtonTapped:" destination="BYZ-38-t0r" eventType="valueChanged" id="3NF-rG-4gy"/>
                                                 </connections>
                                             </stepper>
                                             <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BFS-te-min">
@@ -80,7 +80,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="calculateButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ThZ-8h-vrC"/>
+                                                    <segue destination="hpS-OM-ozN" kind="presentation" id="bd6-VC-B5G"/>
                                                 </connections>
                                             </button>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="460-oP-hmJ">
@@ -208,16 +208,16 @@
                                                                             </subviews>
                                                                         </stackView>
                                                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="j53-HG-gJH">
-                                                                            <rect key="frame" x="10" y="54" width="354" height="41"/>
+                                                                            <rect key="frame" x="10" y="54" width="354" height="43"/>
                                                                             <subviews>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="185.5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J01-3N-xbv">
-                                                                                    <rect key="frame" x="0.0" y="0.0" width="88" height="41"/>
+                                                                                    <rect key="frame" x="0.0" y="0.0" width="88" height="43"/>
                                                                                     <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="35"/>
                                                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="split by 10 people" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P26-MO-bby">
-                                                                                    <rect key="frame" x="98" y="0.0" width="256" height="41"/>
+                                                                                    <rect key="frame" x="98" y="0.0" width="256" height="43"/>
                                                                                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="14"/>
                                                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                     <nil key="highlightedColor"/>
@@ -295,17 +295,111 @@
                     </view>
                     <navigationItem key="navigationItem" title="Tipsy" id="Shz-vo-58G"/>
                     <connections>
-                        <outlet property="billAmountTextField" destination="nCh-WL-asI" id="VDx-w9-TPT"/>
-                        <outlet property="calcButton" destination="BFS-te-min" id="kq7-AX-TkP"/>
-                        <outlet property="numberOfPeople" destination="2Zs-88-N8u" id="9My-6E-48N"/>
-                        <outlet property="recentsTableView" destination="PD9-Bz-GGm" id="paZ-RB-Dmn"/>
-                        <outlet property="stepper" destination="tU7-Fz-GOm" id="gZM-2o-rOh"/>
-                        <outlet property="tipCollectionView" destination="460-oP-hmJ" id="Dpg-W2-zlB"/>
+                        <outlet property="billAmountTextField" destination="nCh-WL-asI" id="oqe-ad-Vni"/>
+                        <outlet property="calcButton" destination="BFS-te-min" id="8u0-85-Tsy"/>
+                        <outlet property="numberOfPeopleLabel" destination="2Zs-88-N8u" id="ZRN-SO-d6c"/>
+                        <outlet property="recentTableView" destination="PD9-Bz-GGm" id="2yH-UR-b9s"/>
+                        <outlet property="stepper" destination="tU7-Fz-GOm" id="Rjw-B0-rHx"/>
+                        <outlet property="tipCollectionView" destination="460-oP-hmJ" id="e3q-35-qDF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="130.58035714285714"/>
+        </scene>
+        <!--ResultVC-->
+        <scene sceneID="DKd-cq-1GF">
+            <objects>
+                <viewController id="hpS-OM-ozN" customClass="ResultVC" customModule="Tipsy" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="VPE-qj-3mt">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="euB-BU-EcS">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nRb-jA-WvG">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="421"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="dRb-Ht-vsj">
+                                                <rect key="frame" x="81.5" y="129.5" width="251.5" height="162.5"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total per person" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3a1-Bl-MKg">
+                                                        <rect key="frame" x="43" y="0.0" width="165" height="26.5"/>
+                                                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="23"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="14.45" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uzH-W3-crA">
+                                                        <rect key="frame" x="0.0" y="46.5" width="251.5" height="116"/>
+                                                        <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="95"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                        <constraints>
+                                            <constraint firstItem="dRb-Ht-vsj" firstAttribute="centerX" secondItem="nRb-jA-WvG" secondAttribute="centerX" id="3SM-1O-Y11"/>
+                                            <constraint firstItem="dRb-Ht-vsj" firstAttribute="centerY" secondItem="nRb-jA-WvG" secondAttribute="centerY" id="Dxe-5a-RZI"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TzM-in-QKb">
+                                        <rect key="frame" x="0.0" y="421" width="414" height="421"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Split between 5 people, with 0% tip" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OGt-Ng-n4A">
+                                                <rect key="frame" x="20" y="15" width="374" height="53"/>
+                                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="23"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ocH-4d-Oy7">
+                                                <rect key="frame" x="138" y="334" width="138" height="45"/>
+                                                <color key="backgroundColor" red="0.2765892311" green="0.53000079310000003" blue="0.17324491559999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="45" id="cbY-wg-LL5"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                                <state key="normal" title="RECALCULATE">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="recalculateBtn:" destination="hpS-OM-ozN" eventType="touchUpInside" id="8Vk-Xe-9bh"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="OGt-Ng-n4A" firstAttribute="top" secondItem="TzM-in-QKb" secondAttribute="top" constant="15" id="3X2-Ua-rmX"/>
+                                            <constraint firstAttribute="trailing" secondItem="OGt-Ng-n4A" secondAttribute="trailing" constant="20" id="47f-9U-DYF"/>
+                                            <constraint firstItem="OGt-Ng-n4A" firstAttribute="leading" secondItem="TzM-in-QKb" secondAttribute="leading" constant="20" id="gyz-81-IiN"/>
+                                            <constraint firstItem="ocH-4d-Oy7" firstAttribute="centerX" secondItem="TzM-in-QKb" secondAttribute="centerX" id="hfe-oG-13G"/>
+                                            <constraint firstItem="ocH-4d-Oy7" firstAttribute="bottom" secondItem="TzM-in-QKb" secondAttribute="bottomMargin" id="lOK-1E-SQJ"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="05Z-Xw-d7L"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="euB-BU-EcS" firstAttribute="trailing" secondItem="05Z-Xw-d7L" secondAttribute="trailing" id="9rc-mZ-7wZ"/>
+                            <constraint firstItem="euB-BU-EcS" firstAttribute="leading" secondItem="05Z-Xw-d7L" secondAttribute="leading" id="VMQ-zh-KtA"/>
+                            <constraint firstAttribute="bottom" secondItem="euB-BU-EcS" secondAttribute="bottom" id="eGR-od-4vM"/>
+                            <constraint firstItem="euB-BU-EcS" firstAttribute="top" secondItem="VPE-qj-3mt" secondAttribute="top" id="vBu-iz-iU8"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="recalculateButton" destination="ocH-4d-Oy7" id="a98-ky-aAE"/>
+                        <outlet property="splitAndTip" destination="OGt-Ng-n4A" id="tLJ-na-nKJ"/>
+                        <outlet property="topView" destination="nRb-jA-WvG" id="RUz-dy-z23"/>
+                        <outlet property="totalPrice" destination="uzH-W3-crA" id="KpL-s2-JvK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Aj1-4g-57z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1902.8985507246377" y="130.58035714285714"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ob8-WU-ndm">
@@ -333,8 +427,14 @@
     </scenes>
     <resources>
         <image name="location" width="1024" height="1024"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemGray5Color">
             <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
